--- a/EqUiWebUi/Areas/Alert/Views/h_alert/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/h_alert/Index.cshtml
@@ -51,7 +51,7 @@
                 //add new placeholder afhter selected row
                 $(row).after('<tr id="placeholder"><td colspan="1000"><div class="card"><div class="card-body" id ="placeholderPartial"></div></div></td></tr>');
                 //animation
-                $("#placeholderPartial").html("Loading.....");
+                $("#placeholderPartial").html("<i class='fas fa-spinner fa-spin fa-2x'></i>");
                 //load url in placeholder
                 var url = "@Url.Action("_Details","Alert",new {Area = "Alert" })?id=" + data["id"];
                 $("#placeholderPartial").load(url);
