--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/CurrentTipstatus.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/CurrentTipstatus.cshtml
@@ -28,7 +28,7 @@
     <!--Tipstatus script-->
     <script type="text/javascript">
         //render grid and subscrible to row clicked events
-        $('#TipstatusGrid').html('Loading...');
+        $('#TipstatusGrid').html("<i class='fas fa-spinner fa-spin fa-2x'></i>");
         $('#TipstatusGrid').mvcgrid({
             sourceUrl: '@Url.Action("_TipStatus")', // Grid source url string
             requestType: 'get', // Ajax grid request type
