--- a/EqUiWebUi/Areas/VASC/Views/c_service_setup/_sessionDetails.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_service_setup/_sessionDetails.cshtml
@@ -16,7 +16,7 @@
 
 
 <script>
-    $("#l_operationGridContainer").html("Loading.....");
+    $("#l_operationGridContainer").html("<i class='fas fa-spinner fa-spin fa-2x'></i>");
     $('#l_operationGridContainer').mvcgrid({
         sourceUrl: '@Html.Raw(@Url.Action("_List", "l_operation",new { sessionName = ViewBag.sessionName }))',
         requestType: 'get', // Ajax grid request type
