--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/CurrentTipstatus.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/CurrentTipstatus.cshtml
@@ -3,8 +3,10 @@
     ViewBag.Title = "CurrentTipstatus";
 }
 <div class="card">
-    <div class="card-header bg-primary">
-        <h4>CurrentTipstatus</h4>
+    <div class="card-header bg-primary row">
+          
+        <h4 class="col-8">CurrentTipstatus</h4>
+        <a href="@Url.Action("PlanTipChange")" class="btn btn-warning btn-lg col-4">Plan tipchange &raquo;</a>
     </div>
 
     <div class="card-body">
