--- a/EqUiWebUi/Areas/Alert/Views/Alert/AASPOTAlertList.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/AASPOTAlertList.cshtml
@@ -22,37 +22,39 @@
     columns.Add(c => c.triggerCount).Titled("TC").Filterable(true);
 //render dropdown to set alert status
 columns.Add(c => c.c_state.state)
-           .Titled("State")
-           .Encoded(false)
-           .Filterable(true)
-           .RenderedAs(c => MyFilters.ChangeAlertStatus(c.id, c.c_state.state));
+               .Titled("State")
+               .Encoded(false)
+               .Filterable(true)
+               .RenderedAs(c => MyFilters.ChangeAlertStatus(c.id, c.c_state.state));
 
 //launch sbcu tool
 columns.Add(c => c)
-                  .Encoded(false)
-                  .Filterable(false)
-                  .Sortable(false)
-                  //gefoefel om de tool id er uit te halen! Dit kan falen als er geen 'gun:' in de omschrijving zit dus is ROMMEL code
-                  //in de laatste versie is het niet meer gun:x maar gunx (het alarmobject) vandaar de replace
-                  .RenderedAs(c => MyEquiToolkit.SbcuTool(c.location, c.info.Replace(":","").Substring(c.info.IndexOf("gun"), 5).Replace("gun", "")));
+                      .Encoded(false)
+                      .Filterable(false)
+                      .Sortable(false)
+                      //gefoefel om de tool id er uit te halen! Dit kan falen als er geen 'gun:' in de omschrijving zit dus is ROMMEL code
+                      //in de laatste versie is het niet meer gun:x maar gunx (het alarmobject) vandaar de replace
+                      .RenderedAs(c => MyEquiToolkit.SbcuTool(c.location, c.info.Replace(":", "").Substring(c.info.IndexOf("gun"), 5).Replace("gun", "")));
 
 //add filterbutton
 columns.Add(c => c)
-                .Titled("")
-                .Encoded(false)
-                .RenderedAs(c => MyFilters.IconActionLink(Url.Action("AASPOTAlertList", new { LocationFilter = c.location }), "fas fa-filter", "", "Filter alerts for this location")
-                ).Filterable(false);
+                    .Titled("")
+                    .Encoded(false)
+                    .RenderedAs(c => MyFilters.IconActionLink(Url.Action("AASPOTAlertList", new { LocationFilter = c.location }), "fas fa-filter", "", "Filter alerts for this location")
+                    ).Filterable(false);
 
 //add edit button
 columns.Add(c => c)
-                .Titled("")
-                .Encoded(false)
-                .RenderedAs(c => MyFilters.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Edit this alert")
-                ).Filterable(false);
+                    .Titled("")
+                    .Encoded(false)
+                    .RenderedAs(c => MyFilters.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Edit this alert")
+                    ).Filterable(false);
 
 }).Filterable().Sortable().Pageable(pager =>
 {
-    pager.RowsPerPage = 17;
+    pager.RowsPerPage = 20;
+    pager.PageSizes = new Dictionary<Int32, String> { { 0, "All" }, { 20, "20" }, { 40, "40" }, { 80, "80" }, { 100, "100" } };
+    pager.ShowPageSizes = true;
 }).Empty("Did not find anything").Css("table-hover").RowCss(row => MyRowStyling.getRowStyleStatus(row.c_state.state))
 
 
