--- a/EqUiWebUi/Areas/VASC/Views/c_controller_class/Index.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller_class/Index.cshtml
@@ -77,6 +77,6 @@
             }
         });
         //sim click on first row.
-        $("#c_controller_class>table>tbody>tr:first").trigger('click');
+        $('[data-name="c_controller_class"]>table>tbody>tr:first').trigger('click');
     </script>
 }
