--- a/EqUiWebUi/Areas/Alert/Views/L_controlLimits/_ControlLimitsGrid.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/L_controlLimits/_ControlLimitsGrid.cshtml
@@ -20,7 +20,9 @@
 
 }).Filterable().Sortable().Pageable(pager =>
 {
-    pager.RowsPerPage = 17;
+    pager.RowsPerPage = 20;
+    pager.PageSizes = new Dictionary<Int32, String> { { 0, "All" }, { 20, "20" }, { 40, "40" }, { 80, "80" }, { 100, "100" } };
+    pager.ShowPageSizes = true;
 }).Empty("Did not find anything").Css("table-hover")
 
 
