--- a/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
@@ -5,15 +5,13 @@
     <div class="card-header bg-light">
         <h6 class="card-title text-black-50">
             Workorders
-            <a class="fas fa-wrench text-black-50"  href="#" data-toggle="popover" data-placement="bottom" id="workorderOnLocationPopover"></a>
+            <a class="fas fa-wrench text-black-50" href="#" data-toggle="popover" data-placement="bottom" id="workorderOnLocationPopover"></a>
             <a class="far fa-window-restore text-black-50" id="goToWorkordersHyperlink" href="#"></a>
-            <span class="clickable float-right text-black-50"><i class="fas fa-chevron-circle-up fa-1" ></i></span>
+            <span class="clickable float-right text-black-50"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h6>
     </div>
     <div class="card-body">
-        <div id="workorderOnLocationGridSpincontainer" style="position:relative">
-            <div id="workorderOnLocationGrid" class="mvc-grid"></div>
-        </div>
+            <div data-name= "Workorders" class="mvc-grid"></div>
     </div>
 </div>
 
@@ -24,14 +22,14 @@
         <div class="card-body">
             <div class="form-group">
                 <div class="form-group">
-                    @Html.LabelFor(m => m.b_ciblings, new { @class = "control-label col-6"})
+                    @Html.LabelFor(m => m.b_ciblings, new { @class = "control-label col-6" })
                     <div class="col-6">
                         @Html.CheckBoxFor(m => m.b_ciblings, new { @class = "form-control input-md" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(m => m.b_preventive, new { @class = "control-label col-6"})
+                    @Html.LabelFor(m => m.b_preventive, new { @class = "control-label col-6" })
                     <div class="col-6">
                         @Html.CheckBoxFor(m => m.b_preventive, new { @class = "form-control input-md" })
                     </div>
@@ -41,8 +39,8 @@
     </div>
 </div>
 
-<!--_workorderOnLocation-->
-<script>
+    <!--_workorderOnLocation-->
+    <script>
     //enable popover for settings.
     $("#workorderOnLocationPopover").popover({
         html: true,
@@ -52,15 +50,15 @@
     });
     //build query string
     function workorderOnLocationGridUrlParms() {
-        var result = "&location=@Model.location" +
-            "&locancestor=@Model.locancestor" +
+        var result = "&location= @Url.Encode(Model.location)" +
+            "&locancestor=@Url.Encode(Model.locancestor)" +
             "&b_ciblings=" + $('#b_ciblings').is(':checked')  +
             "&b_preventive=" + $('#b_preventive').is(':checked') +
-            "&jpnum=@Model.jpnum" +
-            "&worktype=@Model.worktype" +
-            "&wonum=@Model.wonum" +
-            "&status=@Model.status" +
-            "&ownergroup=@Model.ownergroup" +
+            "&jpnum=@Url.Encode(Model.jpnum)" +
+            "&worktype=@Url.Encode(Model.worktype)" +
+            "&wonum=@Url.Encode(Model.wonum)" +
+            "&status=@Url.Encode(Model.status)" +
+            "&ownergroup=@Url.Encode(Model.ownergroup)" +
             "&startdate=@Model.startdate.ToString("yyyy-MM-dd HH:mm:ss")" +
             "&enddate=@Model.enddate.ToString("yyyy-MM-dd HH:mm:ss")" +
             "&RealtimeConn=@Model.realtimeConn"
@@ -70,7 +68,8 @@
     $('#goToWorkordersHyperlink').attr('href', '@Url.Action("Workorders")?' + workorderOnLocationGridUrlParms() + "&loadOnInit=true");
 //render grid and subscrible to row clicked events
     function loadWorkorderOnLocationGrid() {
-        $('#workorderOnLocationGrid').mvcgrid({
+        $('[data-name= "Workorders"]').html("<i class='fa fa-spinner fa-pulse fa-2x fa-fw'></i>");
+        $('[data-name= "Workorders"]').mvcgrid({
             sourceUrl: '@Url.Action("_workordersOnLocationGrid")?' + workorderOnLocationGridUrlParms(), // Grid source url string
             //query: '?search=test', // Grid query string
             requestType: 'get', // Ajax grid request type
@@ -97,16 +96,15 @@
             reloadEnded: function () {
                 //simulate click on first row so that the details load automatic IF ROWCOUNT == 1
                 if ($('[data-name="Workorders"]>table>tbody>tr').length == 1) {
-                  
+
                     $('[data-name="Workorders"]>table>tbody>tr:first').trigger('click');
                 }
                 //subscribe to click event (launch external window)
                 initUrlNewWindow();
             },
             reloadFailed: function (result) {
-                $("#workorderOnLocationGrid").html("Error while loading!!!");
-                // this - grid instance which invoked the event
-                // result - failed ajax response result
+                console.log(result);
+                $('[data-name= "Workorders"]').html("Error while loading!!!");
             }
         });
     }
@@ -120,4 +118,5 @@
     $('#b_preventive').click(function () {
         loadWorkorderOnLocationGrid();
     });
-</script>
+
+  </script>
