--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -111,7 +111,7 @@
         </p>
 
         <p>
-            <a href="~/Gadata/Table/BodyTrackWebgrid" class="btn btn-primary btn-sm">Bodytracking &raquo;</a>
+            <a href="~/Gadata/Table/BodyTrackWebgrid?DataGrid-body-no-equals=99999999" class="btn btn-primary btn-sm">Bodytracking &raquo;</a>
             Body tracking (robot data A LIJN 339 ONLY!)
         </p>
     </div>
