--- a/EqUiWebUi/Areas/VWSC/Views/vwsc/Index.cshtml
+++ b/EqUiWebUi/Areas/VWSC/Views/vwsc/Index.cshtml
@@ -1,1 +1,56 @@
-﻿<h1>VWSC</h1>
+﻿
+@{
+    ViewBag.Title = "VWSC";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<h2>VWSC</h2>
+
+
+<div class="card">
+    <div class="card-header bg-danger">
+        <h5 class="card-title text-white">
+            VWSC MAIN settings
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h5>
+    </div>
+    <div class="card-body">
+        <div class="alert alert-danger">
+            <strong>Add/Edit service setup</strong>
+            <p>*Here we can setup/view different sessions of VWSC</p>
+            <p>*View L_operation log for a session </p>
+            <p>*Change session settings</p>
+        </div>
+        <p><a href="~/VWSC/c_service_setup/index" class="btn btn-danger btn-sm">c_service_setup &raquo;</a></p>
+        <div class="alert alert-danger">
+            <strong>Add/Edit timer class</strong>
+            <p>*A timer class set what is done for a certain 'type' of timer</p>
+            <p>*You can only add something that is defined in one of the vwsc subsystems</p>
+        </div>
+        <p><a href="~/vwsc/c_timer_class/index" class="btn btn-danger btn-sm">c_timer_class &raquo;</a></p>
+
+        <p><a href="~/vwsc/rt_active_info/index" class="btn btn-success btn-sm">rt_active_info &raquo;</a>See current connection status for a timer</p>
+        <p><a href="~/vwsc/rt_active_info/index?ShowNOKonly=true" class="btn btn-success btn-sm">NOK only &raquo;</a>See timers that are NOT connected now</p>
+    </div>
+</div>
+
+<hr />
+
+<div class="card">
+    <div class="card-header bg-danger">
+        <h5 class="card-title text-white">
+            VWSC subsystems
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h5>
+    </div>
+
+    <div class="card-body">
+        <div class="alert alert-info">
+            <strong>Add/Edit csv files to be logged</strong>
+        </div>
+        <p><a href="~/vasc/c_csv_log/index" class="btn btn-danger btn-sm">c_csv_log &raquo;</a></p>
+
+      
+    </div>
+</div>
+
