end of day. (more work on vwsc UI)

--- a/EqUiWebUi/Areas/VWSC/Views/c_timer/Index.cshtml
+++ b/EqUiWebUi/Areas/VWSC/Views/c_timer/Index.cshtml
@@ -7,7 +7,7 @@
                 Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Index of timers</h2>
 
 <p>
     @Html.ActionLink("Add a new Timer", "Edit", new { id = -1 })
