--- a/EqUiWebUi/Areas/VWSC/Views/vwsc/Index.cshtml
+++ b/EqUiWebUi/Areas/VWSC/Views/vwsc/Index.cshtml
@@ -46,11 +46,16 @@
 
     <div class="card-body">
         <div class="alert alert-info">
-            <strong>Add/Edit csv files to be logged</strong>
+            <strong>Add/Edit bosch views to be logged</strong>
         </div>
-        <p><a href="~/vasc/c_csv_log/index" class="btn btn-danger btn-sm">c_csv_log &raquo;</a></p>
+        <p><a href="~/vwsc/c_bosch_view/index" class="btn btn-danger btn-sm">c_bosch_view &raquo;</a></p>
+    </div>
 
-      
+    <div class="card-body">
+        <div class="alert alert-info">
+            <strong>Add/Edit error</strong>
+        </div>
+        <p><a href="~/vwsc/c_error/index" class="btn btn-danger btn-sm">c_error &raquo;</a></p>
     </div>
 </div>
 
