--- a/EqUiWebUi/Areas/VWSC/Views/c_timer/_List.cshtml
+++ b/EqUiWebUi/Areas/VWSC/Views/c_timer/_List.cshtml
@@ -3,7 +3,7 @@
 @Html.Grid(Model).Named("c_timerGrid").Build(columns =>
 {
     columns.Add(c => c.ID).Titled("id").InitialSort(GridSortOrder.Asc);
-    columns.Add(c => c._Enable_bit).Titled("enable_bit");
+    columns.Add(c => c._Enable_bit).Titled("enable_bit").Filterable(false);
     columns.Add(c => c.enable_bit).Titled("eb");
     columns.Add(c => c.Name).Titled("Name");
     columns.Add(c => c.NPT.Name).Titled("NPT");
