--- a/EqUiWebUi/Areas/VWSC/Views/c_timer_class/_Details.cshtml
+++ b/EqUiWebUi/Areas/VWSC/Views/c_timer_class/_Details.cshtml
@@ -7,13 +7,18 @@
             c timers in this class
             @if (ViewBag.timer_id != null)
             {
-            <strong>Filtered on timer_id: @ViewBag.timer_id</strong>
+                <strong>Filtered on timer_id: @ViewBag.timer_id</strong>
             }
-            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+
         </h5>
+        <div class="text-muted">
+            (timers connected to this class)
+            @Html.ActionLink("c_timer index", "Index", "c_timer")
+        </div>
+        <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
     </div>
     <div class="card-body">
-        <div data-name="c_timer" class="mvc-grid"></div>
+        <div data-name="c_timerGrid" class="mvc-grid"></div>
     </div>
 </div>
 
@@ -22,17 +27,36 @@
 <div class="card">
     <div class="card-header bg-light">
         <h5 class="card-title text-black-50">
-            c variable
+            c bosch view
         </h5>
         <div class="text-muted">
-            (Rapid variables or IO signals handeld *logged to a table or used as event)
-            @Html.ActionLink("c_variable index", "Index", "c_variable")
+            (bosch views to be handled and logged to a table)
+            @Html.ActionLink("c_bosch_view index", "Index", "c_bosch_view")
         </div>
         <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
 
     </div>
     <div class="card-body">
-        <div id="c_variableGrid" class="mvc-grid"></div>
+        <div data-name="c_bosch_viewGrid" class="mvc-grid"></div>
+    </div>
+</div>
+
+<hr />
+
+<div class="card">
+    <div class="card-header bg-light">
+        <h5 class="card-title text-black-50">
+            c error
+        </h5>
+        <div class="text-muted">
+            (Actions for specific errors)
+            @Html.ActionLink("c_error index", "Index", "c_error")
+        </div>
+        <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+
+    </div>
+    <div class="card-body">
+        <div data-name="c_errorGrid" class="mvc-grid"></div>
     </div>
 </div>
 
@@ -41,14 +65,33 @@
 
 <script>
     //load girds
-    $('[data-name="c_timer"]').html("<i class='fas fa-spinner fa-spin fa-2x'></i>");
-    $('[data-name="c_timer"]').mvcgrid({
-                sourceUrl: '@Html.Raw(@Url.Action("_List", "c_timer", new { timerclass = Model.id, timer_id = ViewBag.timer_id }))',
+    $('[data-name="c_timerGrid"]').html("<i class='fas fa-spinner fa-spin fa-2x'></i>");
+    $('[data-name="c_timerGrid"]').mvcgrid({
+        sourceUrl: '@Html.Raw(@Url.Action("_List", "c_timer", new { timerclass = Model.id, timer_id = ViewBag.timer_id }))',
         requestType: 'get', // Ajax grid request type
+        reload: true,
         reloadFailed: function (result) {
-            $('[data-name="c_timer"]').html("Error while loading!!!");
-                }
-            });
+            $('[data-name="c_timerGrid"]').html("Error while loading!!!");
+        }
+    });
 
+    $('[data-name="c_bosch_viewGrid"]').html("<i class='fas fa-spinner fa-spin fa-2x'></i>");
+    $('[data-name="c_bosch_viewGrid"]').mvcgrid({
+        sourceUrl: '@Html.Raw(@Url.Action("_List", "c_bosch_view", new { enable_mask = Model.cBoschViewMask, timer_id = ViewBag.timer_id }))',
+        requestType: 'get', // Ajax grid request type
+        reload: true,
+        reloadFailed: function (result) {
+            $('[data-name="c_bosch_viewGrid"]').html("Error while loading!!!");
+        }
+    });
 
+    $('[data-name="c_errorGrid"]').html("<i class='fas fa-spinner fa-spin fa-2x'></i>");
+    $('[data-name="c_errorGrid"]').mvcgrid({
+        sourceUrl: '@Html.Raw(@Url.Action("_List", "c_error", new { enable_mask = Model.cBoschViewMask, timer_id = ViewBag.timer_id }))',
+        requestType: 'get', // Ajax grid request type
+        reload: true,
+        reloadFailed: function (result) {
+            $('[data-name="c_errorGrid"]').html("Error while loading!!!");
+        }
+    });
 </script>
