--- a/EqUiWebUi/Areas/VWSC/Views/c_service_setup/_sessionSetupGrid.cshtml
+++ b/EqUiWebUi/Areas/VWSC/Views/c_service_setup/_sessionSetupGrid.cshtml
@@ -1,13 +1,13 @@
-﻿@model List<EqUiWebUi.Areas.VWSC.Models.VWSC_c_bosch_view>
+﻿
+@model IEnumerable<EqUiWebUi.Areas.VWSC.Models.VWSC_c_service_setup>
 
-@Html.Grid(Model).Named("c_bosch_viewGrid").Build(columns =>
+@Html.Grid(Model).Named("c_service_setupGrid").Build(columns =>
 {
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
-    columns.Add(c => c._Enable_bit).Titled("enable_bit");
-    columns.Add(c => c.view).Titled("view");
-    columns.Add(c => c.rt_table).Titled("rt_table");
-    columns.Add(c => c._Poll_rate).Titled("poll_rate");
-    columns.Add(c => c.day_limit).Titled("day_limit");
+    columns.Add(c => c._Enable_bit).Titled("enable_mask"); //this is like enable bit
+    columns.Add(c => c.name).Titled("name");
+    columns.Add(c => c.value).Titled("value");
+    columns.Add(c => c.description).Titled("description");
     columns.Add(c => c)
                     .Titled("")
                     .Encoded(false)
@@ -17,7 +17,5 @@
 {
     pager.RowsPerPage = 10;
 }).Empty("Did not find anything").Css("table-hover")
-
 <div class="badge">Count: @Model.Count()</div>
-
 
