ready to start testing

--- a/EqUiWebUi/Areas/VASC/Views/c_service_setup/_sessionSetupGrid.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_service_setup/_sessionSetupGrid.cshtml
@@ -3,7 +3,7 @@
 @Html.Grid(Model).Named("c_service_setup").Build(columns =>
 {
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
-    columns.Add(c => c._Enable_bit).Titled("enable_mask"); //this is like enable bit
+    columns.Add(c => c._Enable_bit).Titled("Enable_bit"); //this is like enable bit
     columns.Add(c => c.name).Titled("name");
     columns.Add(c => c.value).Titled("value");
     columns.Add(c => c.description).Titled("description");
@@ -15,6 +15,8 @@
 }).Filterable().Sortable().Pageable(pager =>
 {
     pager.RowsPerPage = 10;
+    pager.PageSizes = new Dictionary<Int32, String> { { 0, "All" }, { 10, "10" }, { 20, "20" }, { 40, "40" }, { 80, "80" }, { 100, "100" } };
+    pager.ShowPageSizes = true;
 }).Empty("Did not find anything").Css("table-hover")
 <div class="badge">Count: @Model.Count()</div>
 
