--- a/EqUiWebUi/Areas/VASC/Views/c_controller/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller/_List.cshtml
@@ -22,6 +22,8 @@
 }).Filterable().Sortable().Pageable(pager =>
 {
     pager.RowsPerPage = 10;
+    pager.PageSizes = new Dictionary<Int32, String> { { 0, "All" }, { 10, "10" }, { 20, "20" }, { 40, "40" }, { 80, "80" }, { 100, "100" } };
+    pager.ShowPageSizes = true;
 }).Empty("Did not find anything").Css("table-hover")
 
 <div class="badge">Count: @Model.Count()</div>
