--- a/EqUiWebUi/Areas/VWSC/Views/c_service_setup/Index.cshtml
+++ b/EqUiWebUi/Areas/VWSC/Views/c_service_setup/Index.cshtml
@@ -2,8 +2,10 @@
 @model IEnumerable<EqUiWebUi.Areas.VWSC.Models.winService>
 
 @{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+                /**/
+
+                ViewBag.Title = "Index";
+                Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>List of all VWSC sessions</h2>
@@ -11,12 +13,12 @@
 @Html.Grid(Model).Named("c_service_setupSessionsGrid").Build(columns =>
 {
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
-    columns.Add(c => c._Enable_bit).Titled("enable_mask");
-    columns.Add(c => c.bit_id).Titled("bit_id").Css("d-none");
+    columns.Add(c => c._SessionType).Titled("SessionType");
+    columns.Add(c => c._Enable_bit).Titled("Enable_bit");
+    columns.Add(c => c.bit_id).Titled("bit_id");//.Css("d-none");
     columns.Add(c => c.SessionName).Titled("SessionName");
-//columns.Add(c => c.description).Titled("description");
-columns.Add(c => c.ServiceName).Titled("ServiceName");
-    columns.Add(c => c.ServiceDisplayName).Titled("ServiceDisplayName");
+    columns.Add(c => c.description).Titled("description");
+    columns.Add(c => c.ServiceName).Titled("ServiceName");
     columns.Add(c => c)
        .Titled("ServiceStatus")
        .Encoded(false)
@@ -24,7 +26,12 @@ columns.Add(c => c.ServiceName).Titled("ServiceName");
        .RenderedAs(c => VASChelpers.SetServiceState(c.ServiceName, c.ServiceStatus));
 //columns.Add(c => c.ServiceStartName).Titled("StartName");
 columns.Add(c => c.ServiceDescription).Titled("ServiceDescription");
-}).Filterable().Sortable().Empty("Did not find anything").Css("table-hover")
+}).Filterable().Sortable().Pageable(pager =>
+{
+    pager.RowsPerPage = 10;
+    pager.PageSizes = new Dictionary<Int32, String> { { 0, "All" }, { 10, "10" }, { 20, "20" }, { 40, "40" }, { 80, "80" }, { 100, "100" } };
+    pager.ShowPageSizes = true;
+}).Empty("Did not find anything").Css("table-hover")
 
 <hr />
 
