--- a/EqUiWebUi/Areas/VWSC/Views/l_operation/_List.cshtml
+++ b/EqUiWebUi/Areas/VWSC/Views/l_operation/_List.cshtml
@@ -11,7 +11,9 @@
     columns.Add(c => c.Description).Titled("Desciption");
 }).Filterable().Sortable().Pageable(pager =>
 {
-    pager.RowsPerPage = 15;
+    pager.RowsPerPage = 10;
+    pager.PageSizes = new Dictionary<Int32, String> { { 0, "All" }, { 10, "10" }, { 20, "20" }, { 40, "40" }, { 80, "80" }, { 100, "100" } };
+    pager.ShowPageSizes = true;
 }).Empty("Did not find anything").Css("table-hover")
 
 <div class="badge">Count: @Model.Count()</div>
